row overlap in smaller screens fixed

--- a/src/features/jobs/allJobStyles.css
+++ b/src/features/jobs/allJobStyles.css
@@ -16,7 +16,8 @@
     border-radius: 10px;
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(98,98,98,0.6496519721577726) 50%, rgba(1,1,1,1) 100%);
-    height: 170px;
+    min-height: 170px;
+    max-height: auto;
 }
 
 .jobCol {
